Correct double scroll bar

--- a/styles/portfolio-style.sass
+++ b/styles/portfolio-style.sass
@@ -1,7 +1,7 @@
 body
   margin: 0
   padding: 0
-  overflow-x: hidden
+
 
 
 html
@@ -17,7 +17,6 @@ p
 
 .generalContainer
   position: absolute
-  overflow-x: hidden
   width: 100vw
   height: 5550px
   border: 25px solid white
